--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "lint": "eslint .",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@mui/icons-material": "^6.4.7",
-      "@tailwindcss/vite": "^4.0.12",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "react-image-gallery": "^1.4.0",
-      "react-slideshow-image": "^4.3.2",
-      "reactjs-popup": "^2.0.6",
-      "tailwindcss": "^4.0.12"
+        "@mui/icons-material": "^6.4.7",
+        "@tailwindcss/vite": "^4.0.12",
+        "@vercel/analytics": "^1.5.0",
+        "@vercel/speed-insights": "^1.2.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-image-gallery": "^1.4.0",
+        "react-slideshow-image": "^4.3.2",
+        "reactjs-popup": "^2.0.6",
+        "tailwindcss": "^4.0.12"
     },
     "devDependencies": {
-      "@eslint/js": "^9.21.0",
-      "@types/react": "^19.0.10",
-      "@types/react-dom": "^19.0.4",
-      "@vitejs/plugin-react": "^4.3.4",
-      "eslint": "^9.21.0",
-      "eslint-plugin-react-hooks": "^5.1.0",
-      "eslint-plugin-react-refresh": "^0.4.19",
-      "globals": "^15.15.0",
-      "vite": "^6.2.0"
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "vite": "^6.2.0"
     }
-  }
-  
+}
