--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.4.7",
         "@react-hookz/web": "^25.1.0",
         "@tailwindcss/vite": "^4.0.12",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
+        "framer-motion": "^12.10.5",
+        "motion": "^12.10.5",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-image-gallery": "^1.4.0",
+        "react-intersection-observer": "^9.16.0",
         "react-router-dom": "^7.3.0",
         "react-slideshow-image": "^4.3.2",
         "react-use": "^17.6.0",
